--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Book Collection</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/base.css">
-    <link rel="stylesheet" href="/styles/layout.css">
-    <link rel="stylesheet" href="/styles/modulas.css">
+    <%- include ('../../layout/head') %>
   </head>
   <body >
-    <main>
-      <h4>My Book Collection</h4>
-    </main>
+    <body>
+      <header>
+        <%- include('../views/layout/header') %>
+      </header>
+      <main>
+        <h4>My Book Collection</h4>
+        <p>
+          You have <%= count %> saved locally.
+        </p>
+        <div>
+          <%- include('./books/details') %>
+        </div>
+      </main>
+    </body>
   </body>
 </html>
