--- a/views/pages/books/details.ejs
+++ b/views/pages/books/details.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include ('../../layout/head') %>
+    <%- include ('./layout/head') %>
   </head>
   <header>    
-    <%- include ('../../layout/header') %>
+    <%- include ('./layout/header') %>
   </header>
   <body>
     <main>
@@ -20,7 +20,7 @@
             </form>
         </div>
         <div>
-          <%- include('../../layout/edit')%>
+          <%- include('./layout/edit')%>
         </div>
     </main>
    
