--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <%- include ('../../layout/head') %>
+  <%- include ('./layout/head') %>
 </head>
 
 <body>
   <header>
-    <%- include ('../../layout/header') %>
+    <%- include ('./layout/header') %>
   </header>
   <main>
     <% searchResults.forEach( book=> { %>
