--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include ('./layout/head') %>
+    <%- include("layout/head") %>
   </head>
   <body >
     <body>
       <header>
-      <%- include('./layout/header') %>
+      <%- include("layout/header") %>
       </header>
       <main>
         <h4>My Book Collection</h4>
